# tinkoff-bot

./: .gitignore  Cargo.toml  crossbuild.sh  test.json
.github/workflows/: quickstart.yml
src/: bot.rs  convert.rs  faces.rs  main.rs  model.rs
src/rest/: convert.rs  entities.rs  error.rs  mod.rs
src/strategy/: dispatch.rs  fixed_amount.rs  mod.rs  static_amount.rs  trailing_stop.rs
src/streaming/: entities.rs  mod.rs
src/telega/: entities.rs  fsm.rs  impls.rs  mod.rs  persistent.rs
src/trader/: entities.rs  mod.rs
