[package]
name = "tinkoff-bot"
version = "0.1.0"
authors = ["Serge <bool.rus@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
tokio-tungstenite = { version = "0.13", features = ["tls"] }
futures-util = ""
tinkoff-api = "1.0.0"
async-channel = "1.5"

reqwest = "0.10"